chore : API KEY .env 사용을 가정한 수정

--- a/recsys_and_llm/ml/recwizard/main.ipynb
+++ b/recsys_and_llm/ml/recwizard/main.ipynb
@@ -21,6 +21,7 @@
    "source": [
     "import recwizard\n",
     "import os\n",
+    "from dotenv import load_dotenv\n",
     "from recwizard import FillBlankConfig, FillBlankPipeline\n",
     "from recwizard import ExpansionConfig, ExpansionPipeline\n",
     "from recwizard import UnicrsRec, UnicrsGen\n",
@@ -30,6 +31,26 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +73,7 @@
     }
    ],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = \"YOUR_API_KEY\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = os.getenv(\"OPENAI_API_KEY\")\n",
     "##################\n",
     "# Recommendation #\n",
     "##################\n",
@@ -71,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "System: Sure, if you're into horror, you might want to check out It (2017). It's really popular in the genre.\n"
+      "System: Sure, if you enjoyed horror movies, you might like Get Out. It's a great mix of suspense and terror.\n"
      ]
     }
    ],
@@ -175,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,14 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "System: Sure, if you enjoyed Interstellar, you might also like Interstellar (2014). It has a similar theme of space exploration and a complex storyline.\n"
+      "System: Sure, if you're looking for something similar to Interstellar, you might enjoy Inception. It also deals with complex scientific concepts and has a compelling narrative.\n"
      ]
     }
    ],
