fix : import에 os랑 dotenv 추가

--- a/recsys_and_llm/ml/quick_start_crs_toolkit.ipynb
+++ b/recsys_and_llm/ml/quick_start_crs_toolkit.ipynb
@@ -10,18 +10,16 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\USER\\Desktop\\24_winter\\RecSys_and_LLM\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "c:\\Users\\USER\\Desktop\\24_winter\\RecSys_and_LLM\\.venv\\Lib\\site-packages\\transformers\\utils\\generic.py:311: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
-      "  torch.utils._pytree._register_pytree_node(\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
     "import crs_toolkit\n",
-    "import os\n",
-    "from dotenv import load_dotenv\n",
     "from crs_toolkit import ChatgptAgent, ChatgptAgentConfig\n",
-    "from crs_toolkit import ChatgptGen, ChatgptRec"
+    "from crs_toolkit import ChatgptGen, ChatgptRec\n",
+    "from dotenv import load_dotenv\n",
+    "import os"
    ]
   },
   {
@@ -48,31 +46,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\USER\\Desktop\\24_winter\\RecSys_and_LLM\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:795: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.environ[\"OPENAI_API_KEY\"] = os.getenv(\"OPENAI_API_KEY\")\n",
-    "##################\n",
-    "# Recommendation #\n",
-    "##################\n",
     "gpt_rec = ChatgptRec.from_pretrained('RecWizard/chatgpt-rec-fillblank')\n",
-    "##################\n",
-    "#   Generation   #\n",
-    "##################\n",
     "gpt_gen = ChatgptGen.from_pretrained('RecWizard/chatgpt-gen-fillblank')\n",
-    "##################\n",
-    "# Configurations #\n",
-    "##################\n",
     "chat_gpt_config = ChatgptAgentConfig()\n",
-    "##################"
+    "pipeline = ChatgptAgent(\n",
+    "    config=chat_gpt_config,\n",
+    "    rec_module=gpt_rec,\n",
+    "    gen_module=gpt_gen\n",
+    ")"
    ]
   },
   {
@@ -82,11 +66,7 @@
    "outputs": [],
    "source": [
     "def set_pipeline():\n",
-    "    pipeline = ChatgptAgent(\n",
-    "        config=chat_gpt_config,\n",
-    "        rec_module=gpt_rec,\n",
-    "        gen_module=gpt_gen\n",
-    "    )\n",
+    "    \n",
     "    return pipeline"
    ]
   },
@@ -156,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletionMessage(content=\"Sure, I can recommend a few. Have you seen The Conjuring? It's a great horror movie.\", refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None)\n"
+      "ChatCompletionMessage(content='Sure, I can suggest a few. Have you seen Seven or Primal Fear? They are both quite suspenseful and thrilling.', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None)\n"
      ]
     }
    ],
@@ -185,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletionMessage(content='Sure, if you enjoyed Interstellar, you might also like 2001: A Space Odyssey. It has similar themes of space exploration and a complex, thought-provoking plot.', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None)\n"
+      "ChatCompletionMessage(content='Sure, if you\\'re looking for movies similar to Interstellar, you might enjoy \"2001: A Space Odyssey\". It also deals with space exploration and has a complex, thought-provoking plot.', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None)\n"
      ]
     }
    ],
